Fix overlay effect on .banner-image: - Assombrissement appliqué uniquement à l'image avec un pseudo-élément (::before) - Texte (.banner-text) désormais visible grâce à un z-index plus élevé - Mise à jour du z-index pour garantir que l'overlay reste derrière le texte

--- a/src/components/Header/Navigation/Navigation.scss
+++ b/src/components/Header/Navigation/Navigation.scss
@@ -23,7 +23,7 @@
   content: ""; /* Crée le soulignement quand le lien est actif */
   position: absolute;
   left: 0;
-  bottom: 5px;
+  bottom: 0;
   width: 100%;
   height: 2px;
   background-color: #000;
