--- a/src/pages/Home/HomeSectionBanner/HomeSectionBanner.scss
+++ b/src/pages/Home/HomeSectionBanner/HomeSectionBanner.scss
@@ -1,6 +1,9 @@
+@use "../../../sass/base" as *;
+@use "../../../sass/mixins" as *;
+@use "../../../sass/variables" as *;
 .home-section-banner {
   position: relative;
-  width: 1240px;
+  width: 100%; // S'adapte à l'écran
   height: 223px;
   border-radius: 25px;
   border: 1px solid black;
@@ -9,10 +12,22 @@
   .banner-image {
     width: 100%;
     height: 100%;
-    background-image: url("/assets/images/forêt.png");
+    background-image: url("/assets/images/panorama.png");
     background-size: cover;
     background-position: center;
-    opacity: 0.8;
+    position: relative; /* Nécessaire pour positionner le pseudo-élément */
+
+    &::before {
+      content: ""; /* Crée un pseudo-élément */
+      position: absolute; /* Positionne-le au-dessus de l'image */
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000000; /* Couleur d'overlay (noir) */
+      opacity: 0.6; /* Ajuste l'opacité pour l'intensité de l'assombrissement */
+      z-index: 0; /* Assure que l'overlay est derrière le texte */
+    }
   }
 
   .banner-text {
@@ -20,10 +35,20 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 2rem;
-    font-weight: bold;
     color: white;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     white-space: nowrap; // Empêche de passer à la ligne
+    @include xx-font; // Remplace @extend par @include
+    z-index: 2; /* Assure que le texte est au-dessus de l'overlay */
+  }
+
+  // Media query pour mobile
+  @include media-query(mobile) {
+    max-width: 335px; // Limite la largeur à 335px en mobile
+    height: 111px; // Ajuste la hauteur en mobile
+
+    .banner-text {
+      @include l-font;
+    }
   }
 }
