--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -9,70 +9,3 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
 }
-// Font size variables
-// ==========================
-.xx-font {
-  font-size: $font-size-xxxl; // 48px
-  line-height: 68.45px;
-  font-weight: 700; // Extra bold
-} // Extra large
-
-.xl-font {
-  font-size: $font-size-xxl; // 36px
-  line-height: 51.34px;
-  font-weight: 500; // Medium bold
-} // Large
-
-// Version 1: l-font avec font-weight: 700 (Bold)
-.l-font {
-  font-size: $font-size-xl; // 24px
-  line-height: 24px;
-  font-weight: 700; // Bold
-} // Medium large
-
-// Version 2: l-font avec font-weight: 500 (Medium)
-.l-font-light {
-  font-size: $font-size-xl; // 24px
-  line-height: 34.22px;
-  font-weight: 500; // Medium weight
-} // Medium large (light version)
-
-.m-font {
-  font-size: $font-size-m; // 18px
-  line-height: 25.67px;
-  font-weight: 700; // Bold
-} // Medium
-
-.m-font-light {
-  font-size: $font-size-m; // 18px
-  line-height: 25.67px;
-  font-weight: 500; // Medium weight
-} // Medium (light version)
-
-.s-font {
-  font-size: $font-size-s; // 14px
-  line-height: 19.96px;
-  font-weight: 500; // Regular weight
-} // Small
-.xs-font-bold {
-  font-size: $font-size-xs; // 13px
-  line-height: 18.54px;
-  font-weight: 700; // Bold weight
-} // Extra small (bold version)
-
-.xxs-font {
-  font-size: $font-size-xxs; // 12px
-  line-height: 17.11px;
-  font-weight: 400; // Regular weight
-} // Tiny
-// Version 2: xxs-font avec font-weight: 500 (Medium)
-.xxs-font-light {
-  font-size: $font-size-xxs; // 12px
-  line-height: 17.11px;
-  font-weight: 500; // Medium weight
-} // Tiny (light version)
-.xxxs-font {
-  font-size: $font-size-xxxs; // 10px
-  line-height: 14.26px;
-  font-weight: 700; // Regular weight
-} // Très tiny (10px)
